--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,23 @@
     <li>
       <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a>
     </li>
+    <li>
+      <a routerLink="/template-driven-form" routerLinkActive="active" ariaCurrentWhenActive="page"
+        >Template driven form</a
+      >
+    </li>
+    <li>
+      <a routerLink="/reactive-form" routerLinkActive="active" ariaCurrentWhenActive="page"
+        >Reactive form</a
+      >
+    </li>
+
+    <li>
+      <a routerLink="/get-data" routerLinkActive="active" ariaCurrentWhenActive="page">Get Data</a>
+    </li>
   </ul>
+
+  <app-parent />
 </nav>
 <!-- The routed views render in the <router-outlet>-->
 ><!--  kieu khi chon routẻ nào no se bay trong trong container outlet này -->
